[package]
name = "farcaster_core"
description = "Farcaster project core library, blockchain atomic swaps."
keywords = ["farcaster", "atomicswap", "bitcoin", "monero"]
version = "0.1.0"
authors = ["Farcaster Devs"]
license = "LGPL-3.0"
homepage = "https://github.com/farcaster-project/farcaster-core"
repository = "https://github.com/farcaster-project/farcaster-core"
documentation = "https://docs.rs/farcaster_core"
readme = "README.md"
include = [
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rpc = []
experimental = ["ecdsa_fun", "secp256kfun", "rand", "sha2", "rand_chacha", "bincode"]
taproot = []
serde = ["serde_crate", "bitcoin/use-serde", "monero/serde_support", "inet2_addr/serde"]

default = ["experimental", "taproot"]

[dependencies]
amplify = "3"
hex = "0.4.3"
tiny-keccak = { version = "2", features = ["keccak"] }
fixed-hash = { version = "0.7.0", default-features = false }
strict_encoding = "=1.2.3"
strict_encoding_derive = "=1.0.0"
lightning_encoding = "0.4.0-beta.1"
thiserror = "1.0.24"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
inet2_addr = { version = "0.5.0", default-features = false, features = ["tor", "strict_encoding"] }
bitvec = { version = "0.22.3" }
bitcoin_hashes = { version = "0.10.0" }

# crypto libs

sha3 = "0.9.1"
rand = { version = "0.8.4", optional = true }
rand_alt = { package = "rand", version = "0.7.3", features = ["std"] }
ecdsa_fun = { version = "0.6", default-features = false, features = ["all"], optional = true }
secp256kfun = { version = "0.6", default-features = false, features = ["std", "serde", "libsecp_compat"], optional = true }
sha2 = { version = "0.9", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
bincode = { version = "1.3.3", optional = true }
curve25519-dalek = "3.0.2"

# blockchain specific
bitcoin = "0.27"
monero = { version = "0.14" }

[dev-dependencies]
bitcoincore-rpc = "0.14"
rand_core = { version = "^0.6.3", features = ["getrandom"] }
secp256k1 = { version = "0.20", features = ["rand-std"] }
lazy_static = "1.4"
serde_yaml = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
