[package]
name = "farcaster_core"
version = "0.3.0"
authors = ["Farcaster Devs"]
documentation = "https://docs.rs/farcaster_core"
homepage = "https://github.com/farcaster-project/farcaster-core"
include = [
  "src/*",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
keywords = ["farcaster", "atomicswap", "bitcoin", "monero"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/farcaster-project/farcaster-core"
description = "Farcaster project core library, blockchain atomic swaps."

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rpc = []
experimental = ["ecdsa_fun", "secp256kfun", "rand", "sha2", "rand_chacha", "bincode"]
taproot = []
serde = ["serde_crate", "bitcoin/use-serde", "monero/serde_support", "inet2_addr/serde"]

default = ["experimental", "taproot"]

[dependencies]
amplify = "3"
bitcoin_hashes = { version = "0.10.0" }
bitvec = { version = "0.22.3" }
fixed-hash = { version = "0.7.0", default-features = false }
hex = "0.4.3"
inet2_addr = { version = "0.5.0", default-features = false, features = ["tor", "strict_encoding"] }
lightning_encoding = "0.5.0-beta.3"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
strict_encoding = "1.7.4"
strict_encoding_derive = "1.7.4"
thiserror = "1.0.24"
tiny-keccak = { version = "2", features = ["keccak"] }

# crypto libs

bincode = { version = "1.3.3", optional = true }
curve25519-dalek = "3.0.2"
ecdsa_fun = { version = "0.6", default-features = false, features = ["all"], optional = true }
rand = { version = "0.8.4", optional = true }
rand_alt = { package = "rand", version = "0.7.3", features = ["std"] }
rand_chacha = { version = "0.3.1", optional = true }
secp256kfun = { version = "0.6", default-features = false, features = ["std", "serde", "libsecp_compat"], optional = true }
sha2 = { version = "0.9", optional = true }
sha3 = "0.9.1"

# blockchain specific
bitcoin = "0.27"
monero = { version = "0.15" }

[dev-dependencies]
bitcoincore-rpc = "0.14"
lazy_static = "1.4"
rand_core = { version = "^0.6.3", features = ["getrandom"] }
secp256k1 = { version = "0.20", features = ["rand-std"] }
serde_yaml = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
