[package]
name = "farcaster_core"
version = "0.5.0"
authors = ["Farcaster Devs"]
documentation = "https://docs.rs/farcaster_core"
homepage = "https://github.com/farcaster-project/farcaster-core"
include = [
  "src/*",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
keywords = ["farcaster", "atomicswap", "bitcoin", "monero"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/farcaster-project/farcaster-core"
description = "Farcaster project core library, blockchain atomic swaps."

edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rpc = []
experimental = ["ecdsa_fun", "secp256kfun", "rand", "sha2", "rand_chacha", "bincode"]
taproot = []
nightly = []

default = ["experimental", "taproot"]

[dependencies]
amplify = "3"
base58-monero = "1"
bitvec = { version = "1.0" }
clap = { version = "3", features = ["derive"] }
fixed-hash = { version = "0.7", default-features = false }
hex = "0.4"
inet2_addr = { version = "0.8", default-features = false, features = ["tor", "strict_encoding", "serde"] }
lightning_encoding = "0.8"
serde = { version = "1", features = ["derive"] }
strict_encoding = "0.8"
strict_encoding_derive = "1.7"
thiserror = "1"
tiny-keccak = { version = "2", features = ["keccak"] }

# crypto libs

bincode = { version = "1", optional = true }
curve25519-dalek = { version = "3", features = ["serde"] }
ecdsa_fun = { version = "0.7", default-features = false, features = ["all"], optional = true }
rand = { version = "0.8.4", optional = true }
rand_alt = { package = "rand", version = "0.7.3", features = ["std"] }
rand_chacha = { version = "0.3.1", optional = true }
secp256kfun = { version = "0.7", default-features = false, features = ["std", "serde", "libsecp_compat"], optional = true }
sha2 = { version = "0.9", optional = true }
sha3 = "0.10"

# blockchain specific
bitcoin = { version = "0.28", features = ["use-serde"] }
monero = { version = "0.17", features = ["serde"] }

[dev-dependencies]
bitcoincore-rpc = "0.15"
lazy_static = "1.4"
rand_core = { version = "0.6.3", features = ["getrandom"] }
secp256k1 = { version = "0.22", features = ["rand-std"] }
serde_yaml = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
